<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/image_bg"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/first_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/white"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/last_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/white"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/age"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="@color/white"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/white"
        tools:ignore="Autofill,VisualLintTextFieldSize" />


    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error"
        android:textAlignment="center"
        android:textSize="20sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp">

        <TextView
            android:id="@+id/tvActiveUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:text="@string/active_user_0"
            android:textAlignment="center"
            android:textSize="17sp" />

        <Space
            android:layout_width="5dp"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/tvDeletedUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:text="@string/deleted_user_0"
            android:textAlignment="center"
            android:textSize="17sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/acbAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/add"
            android:text="@string/add_user"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />

        <Space
            android:layout_width="5dp"
            android:layout_height="1dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/acbRemove"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/remove"
            android:text="@string/remove_user"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />

        <Space
            android:layout_width="5dp"
            android:layout_height="1dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/acbUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/update"
            android:text="@string/update_user"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />
    </LinearLayout>



  </androidx.appcompat.widget.LinearLayoutCompat>